Fix sheet tab styling bleeding into other apps

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,7 +1,7 @@
 @use 'vars/colors';
 @use 'vars/sheet';
 
-.sheet {
+.sheet.genesys {
 	nav.sheet-tabs {
 		// Stretch the tabs container across the full sheet width.
 		margin-left: -1 * sheet.$padding;
